// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track details dialogue Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        Track details
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          slot="content"
        >
          <table
            class="svelte-1v0xvp5"
          >
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Distant Worlds II - More music from Final Fantasy
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album artist
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Nobuo Uematsu
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Artists
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Nobuo Uematsu
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Disk
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                1/1
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Duration
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                0:09
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Genre
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Classical,Soundtrack
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Id
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                17569353
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                ISRC
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                USBVN1010207
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Title
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Victory Theme (Final Fantasy Series)
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Track
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                7/13
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Year
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2010
              </td>
               
            </tr>
          </table>
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      />
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Open
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Track details dialogue With Music Brainz 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        Track details
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          slot="content"
        >
          <table
            class="svelte-1v0xvp5"
          >
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Misery Is a Butterfly
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album artist
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Blonde Redhead
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Artists
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Blonde Redhead
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Comment
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                RØLy!
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Composer
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Blonde Redhead
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Duration
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                3:08
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Encoded by
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Exact Audio Copy   (Secure mode)
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Genre
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Rock
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Id
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                53564179
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Label
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Phantom Records (England)
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Title
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Doll Is Mine
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Track
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                4/11
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Year
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2004
              </td>
               
            </tr>
          </table>
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      />
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Open
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Track details dialogue With Partial 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        Track details
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          slot="content"
        >
          <table
            class="svelte-1v0xvp5"
          >
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Shtirip' Tour
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Artists
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Tram des Balkans
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Date
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2007
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Duration
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2:49
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Genre
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Ethnic
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Id
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                4977489
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Title
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Grande Mère
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Track
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                10
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Year
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2007
              </td>
               
            </tr>
          </table>
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      />
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Open
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Track details dialogue With Replay Gain 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="filter svelte-1vslz6j open"
  />
   
  <div
    class="backdrop svelte-1vslz6j open"
  >
    <button
      class="absolute top-0 right-0 m-4 svelte-2vu076 iconOnly"
    >
      <i
        class="material-icons svelte-2vu076"
      >
        close
      </i>
       
       
       
    </button>
     
    <article
      class="svelte-1vslz6j"
    >
      <header
        class="svelte-1vslz6j"
      >
        Track details
      </header>
       
      <div
        class="content svelte-1vslz6j"
      >
        <div
          slot="content"
        >
          <table
            class="svelte-1v0xvp5"
          >
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Greatest Hits II
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Album artist
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Queen
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Artists
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Queen
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Comment
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Composer
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Queen
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Duration
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                4:24
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Genre
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                rock
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Id
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                2871780
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Label
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                MSI Music Distribution
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Title
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                Show Must Go On
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Track
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                16/17
              </td>
               
            </tr>
            <tr
              class="svelte-1v0xvp5"
            >
              <td
                class="label svelte-1v0xvp5"
              >
                Year
              </td>
               
              <td
                class="value svelte-1v0xvp5"
              >
                1991
              </td>
               
            </tr>
          </table>
        </div>
      </div>
       
      <footer
        class="svelte-1vslz6j"
      />
    </article>
  </div>
   
  
   
  <button
    class="svelte-2vu076"
  >
     
    <span>
      Open
    </span>
     
     
  </button>
</section>
`;
